2007-02-19  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py (IconEntry): apply latest fixes from kiwi r5889

2007-02-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomUtils.py: Add IdMapper class
	* src/GrampsDbUtils/_GedcomParser.py: refactoring

2007-02-18  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_PaperMenu.py: rename PaperStyle to PaperSize
	* src/docgen/HtmlDoc.py: rename PaperStyle to PaperSize
	* src/BaseDoc.py: rename PaperStyle to PaperSize
	* src/plugins/Calendar.py: don't use tmargin

2007-02-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Use a dict instead of an array to use less
	  memory.

2007-02-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: more refactoring

2007-02-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsDbUtils/_GedcomParse.py: Work around some Tracebacks

2007-02-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_NoteTab.py: accelerators replaced with key-press
	signal handler.
	* src/DisplayTabs/_ButtonTab.py: accelerators removed; wrong concept.
	* src/DisplayTabs/_GrampsTab.py: accelerators removed; wrong concept.
	* src/Editors/_EditPrimary.py: accelerators removed; wrong concept.
	* src/Editors/_EditSecondary.py: accelerators removed; wrong concept.
	* src/Editors/_EditReference.py: accelerators removed; wrong concept.
	* src/ManagedWindow.py: accelerators removed; wrong concept.

2007-02-17  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDb/_GrampsDbWriteXML.py: add non-gtk xml writer
	* src/GrampsDb/__init__.py: export non-gtk writer
	* src/GrampsDb/_GrampsDbExceptions.py: add WriteFailure exception
	* src/GrampsDb/_LongOpStatus.py: protect against div by zero
	* src/GrampsDb/_ProgressMonitor.py: workaround gtk issues
	* src/ProgressDialog.py: work around gtk issues
	* src/GrampsDbUtils/_WriteXML.py: make gtk wrapper for non-gtk version
	